HW09 Added DB connection, DB scripts