@@ -4,11 +4,10 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import ru.iukr.linkshortener.dto.CreateLinkInfoRequest;
-import ru.iukr.linkshortener.mapper.LinkInfoMapper;
+import ru.iukr.linkshortener.dto.FilterLinkInfoRequest;
 import ru.iukr.linkshortener.model.LinkInfo;
 import ru.iukr.linkshortener.model.LinkInfoResponse;
 import ru.iukr.linkshortener.dto.LinkInfoUpdateRequest;
-import ru.iukr.linkshortener.property.LinkInfoProperty;
 import ru.iukr.linkshortener.repository.LinkInfoRepository;
 import ru.iukr.linkshortener.service.LinkInfoService;
 
@@ -26,13 +25,9 @@ class LinkInfoServiceImplTest {
     private LinkInfoService linkInfoService;
     @Autowired
     private LinkInfoRepository repository;
-    @Autowired
-    private LinkInfoProperty property;
-    @Autowired
-    private LinkInfoMapper mapper;
 
     private final String link = "https://habr.com/";
-    private final String endDate = LocalDateTime.now().plusDays(1).toString();
+    private final LocalDateTime endDate = LocalDateTime.now().plusDays(1);
     private final CreateLinkInfoRequest request = CreateLinkInfoRequest.builder()
             .endTime(endDate)
             .link(link)
@@ -49,9 +44,7 @@ class LinkInfoServiceImplTest {
 
     @Test
     void getByShortLinkTest() {
-        if (linkInfoService.findAll().isEmpty()) {
-            linkInfoService.createLinkInfo(request);
-        }
+        createIfNotExists();
         LinkInfo createdLinkInfo = repository
                 .findAll()
                 .stream()
@@ -62,19 +55,15 @@ class LinkInfoServiceImplTest {
 
     @Test
     void findAllTest() {
-        if (linkInfoService.findAll().isEmpty()) {
-            linkInfoService.createLinkInfo(request);
-        }
+        createIfNotExists();
         assertFalse(linkInfoService.findAll().isEmpty());
     }
 
     @Test
     void deleteByLinkIdTest() {
-        if (linkInfoService.findAll().isEmpty()) {
-            linkInfoService.createLinkInfo(request);
-        }
+        createIfNotExists();
         int sizeOfLinkStorage = linkInfoService.findAll().size();
-        UUID id = linkInfoService.findAll().get(0).getId();
+        UUID id = linkInfoService.findAll().getFirst().getId();
         linkInfoService.deleteByLinkId(id);
         int sizeOfLinkStorageAfterDeletion = linkInfoService.findAll().size();
         assertTrue(sizeOfLinkStorage > sizeOfLinkStorageAfterDeletion);
@@ -83,10 +72,8 @@ class LinkInfoServiceImplTest {
     @Test
     void updateLinkInfoTest() {
         String description = "New Description";
-        if (linkInfoService.findAll().isEmpty()) {
-            linkInfoService.createLinkInfo(request);
-        }
-        UUID id = linkInfoService.findAll().get(0).getId();
+        createIfNotExists();
+        UUID id = linkInfoService.findAll().getFirst().getId();
         LinkInfoUpdateRequest linkInfoUpdate = LinkInfoUpdateRequest.builder()
                 .id(String.valueOf(id))
                 .description(description)
@@ -95,9 +82,22 @@ class LinkInfoServiceImplTest {
         String foundDescription = linkInfoService
                 .findAll()
                 .stream()
-                .filter(linkInfoResponse -> linkInfoResponse.getId() == id)
+                .filter(linkInfoResponse -> linkInfoResponse.getId().equals(id))
                 .findFirst()
                 .map(LinkInfoResponse::getDescription).get();
         assertEquals(description, foundDescription);
+    }
+
+    @Test
+    void findByFilterTest() {
+        createIfNotExists();
+        assertFalse(linkInfoService.findByFilter(FilterLinkInfoRequest.builder()
+                .linkPart(link).build()).isEmpty());
+    }
+
+    private void createIfNotExists() {
+        if (linkInfoService.findAll().isEmpty()) {
+            linkInfoService.createLinkInfo(request);
+        }
     }
 }
